--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <textarea name="" id="editor" onkeyup="syncro();"></textarea>
         </div>  
         <div class = "col-6 bg-success">
-          <p>Here will be put the Markdown Previewer</p>
+          <p>Here will be put the Markdown Previewer or so I think</p>
           <div id = "preview"></div>
         </div>
       </div>  
