--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="./js/app.js"></script>
   </head>
 
-  <body>
+  <body onload = "init()">
     <div class="container-fluid">
       <div class="row">
         <div class="col text-center bg-danger">
