--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
       <div class="row">
         <div class ="col-6 bg-primary ">
           <p>Here we will put the editor</p>
+          <div class="form-floating">
+            <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
+            <label for="floatingTextarea2">Make your changes!</label>
+          </div>
           <textarea name="" id="editor" onkeyup="syncro();"></textarea>
         </div>  
         <div class = "col-6 bg-success">
