--- a/index.html
+++ b/index.html
@@ -8,28 +8,27 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <script src="./js/marked.js"></script>
     <script src="./js/app.js"></script>
   </head>
 
-  <body onload = "init()">
+  <body onload = "init()" class = "bg-dark">
     <div class="container-fluid">
       <div class="row">
-        <div class="col text-center bg-danger">
-          <h1>Markdown Previewer</h1>
+        <div class="col text-center text-white bg-dark">
+          <h1 class = "my-2">Markdown Previewer</h1>
         </div>
       </div>
       <div class="row">
-        <div class ="col-6 bg-primary ">
-          <p>Here we will put the editor</p>
-          <div class="form-floating">
-            <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
-            <label for="floatingTextarea2">Make your changes!</label>
+        <div id = "edit"class ="col-6 d-flex flex-column">
+          <h2 class ="text-white text-center my-3">Editor</h2>
+          <div class = "form-group flex-grow-1 d-flex flex-column">
+            <textarea id="editor" class = "form-control flex-grow-1 my-2" onkeyup="syncro();"></textarea>
           </div>
-          <textarea name="" id="editor" onkeyup="syncro();"></textarea>
         </div>  
-        <div class = "col-6 bg-success">
-          <p>Here will be put the Markdown Previewer or so I think</p>
+        <div id ="Hell" class = "col-6">
+          <h2 class = "text-black text-center my-3">Previewer</h2>
           <div id = "preview"></div>
         </div>
       </div>  
